# swiftd

./: .gitignore  Makefile  Makefile.in  autogen.sh  config.h  config.h.in  config.status  configure  configure.in
doc/: array.txt  bugs  bugs.txt  swiftd-plugin.conf  threadpool.txt
doc/paper/: Makefile  c10kproblem  c10kproblemzh  c10kproblemzh.tex  c10kprogram  c10kprogramzh  epoll.dia  hcypaperstyle.sty  hcystyle.sty  http.dia  http.eps  httpplugin.dia  inotify.dia  loadplugin.eps  mergepdf.tex  midcheckppt.tex  midsummary.tex  mypaper.tex  paperppt.tex  plugin_s.eps  startup.eps  state.dot  state.eps  statemachine.eps  test.eps  test.tex  xjtupaper_zh.sty
doc/paper/pics/: IO.dia  IO.eps  access1.eps  access1log.eps  access2.eps  access3.eps  complugin.eps  dirindex.eps  epoll.eps  epollvspoll.eps  fsm.eps  httpbaike.eps  httpplugin.dia  httpplugin.eps  inotify.eps  loadplugin.dia  loadplugin.eps  loadpluginlog.eps  nodirindex.eps  plugin_s.eps  plugin_s.xmi  pluginconf.eps  serverhttp.dia  (+10 more)
doc/毕设文档/: 中期检查安排.xls  中期检查表-黄丛宇.doc  任务书考核表等.doc  刘瑶开题报告.doc  周工作计划与总结一.doc  周工作计划与总结三.doc  周工作计划与总结二.doc  工作手册.doc  本科毕业设计（论文）表.doc  毕业设计任务考核书.doc  毕业设计任务考核书_模板.doc  毕业设计任务考核书_黄丛宇.doc  毕业设计整体规划.doc  毕设任务书.doc  毕设导师安排.xls  选题审核表.doc  黄丛宇-选题审核表.doc
src/: Makefile  Makefile.am  Makefile.fde  Makefile.in  Makefile.tp  array.c  array.h  base.c  base.h  bitset.c  bitset.h  buffer.c  buffer.h  chunk.c  chunk.h  config.h  configure.c  configure.h  connection.c  connection.h  crc32.c  data_array.c  data_config.c  data_count.c  data_fastcgi.c  data_integer.c  data_string.c  error_page.c  error_page.h  etag.c  etag.h  fde_epoll.c  fdevent.c  fdevent.h  files  joblist.c  joblist.h  keyvalue.c  keyvalue.h  log.c  (+31 more)
src/mem/: mem.h
src/mm/: Makefile  README  mm.c  mm.h  testmm.c
test/: index.html
test/client/: main.c  test.c  test.sh  testlocalhost.sh
test/dl/: main.c
test/inotify/: main.c  test.c  tmp_file
test/tmp/: index.html
(+19 files in other folders)
